FlightDataManager - tests ok etc

--- a/LogbookApp/LogbookApp.Data.Azure/LogbookApp.Data.Azure.csproj
+++ b/LogbookApp/LogbookApp.Data.Azure/LogbookApp.Data.Azure.csproj
@@ -105,7 +105,7 @@
     </SDKReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlightDataService.cs" />
+    <Compile Include="MobileFlightDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
