--- a/LogbookApp/LogbookApp.LocalData/LogbookApp.LocalData.csproj
+++ b/LogbookApp/LogbookApp.LocalData/LogbookApp.LocalData.csproj
@@ -100,6 +100,10 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <ProjectReference Include="..\LogbookApp.Data\LogbookApp.Data.csproj">
+      <Project>{89900CBD-6C4A-443B-93B9-67081C3308B9}</Project>
+      <Name>LogbookApp.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ILocalStorage.cs" />
