--- a/LogbookApp/LogbookApp/LogbookApp.csproj
+++ b/LogbookApp/LogbookApp/LogbookApp.csproj
@@ -269,6 +269,10 @@
       <Project>{89900cbd-6c4a-443b-93b9-67081c3308b9}</Project>
       <Name>LogbookApp.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LogbookApp.LocalData\LogbookApp.LocalData.csproj">
+      <Project>{72683C7D-0662-4815-9E8E-6E03536FFBCF}</Project>
+      <Name>LogbookApp.LocalData</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
