--- a/LogbookApp/LogbookApp.Data.Test/LogbookApp.Data.Test.csproj
+++ b/LogbookApp/LogbookApp.Data.Test/LogbookApp.Data.Test.csproj
@@ -109,9 +109,8 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlightDataServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestOnlineFlightDataService.cs" />
+    <Compile Include="UserManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
