--- a/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManager.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManager.csproj
@@ -6,11 +6,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{72683C7D-0662-4815-9E8E-6E03536FFBCF}</ProjectGuid>
+    <ProjectGuid>{5895BD95-7913-43CA-961A-5929B08BA6B8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LogbookApp.LocalData</RootNamespace>
-    <AssemblyName>LogbookApp.LocalData</AssemblyName>
+    <RootNamespace>LogbookApp.FlightDataManager</RootNamespace>
+    <AssemblyName>LogbookApp.FlightDataManager</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -104,12 +104,13 @@
       <Project>{89900CBD-6C4A-443B-93B9-67081C3308B9}</Project>
       <Name>LogbookApp.Data</Name>
     </ProjectReference>
+    <ProjectReference Include="..\LogbookApp.LocalData\LogbookApp.LocalData.csproj">
+      <Project>{72683C7D-0662-4815-9E8E-6E03536FFBCF}</Project>
+      <Name>LogbookApp.LocalData</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILocalStorage.cs" />
-    <Compile Include="LocalDataManager.cs" />
-    <Compile Include="LocalStorage.cs" />
-    <Compile Include="LocalStorageBase.cs" />
+    <Compile Include="FlightDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
