--- a/LogbookApp/LogbookApp.Mocks/LogbookApp.Mocks.csproj
+++ b/LogbookApp/LogbookApp.Mocks/LogbookApp.Mocks.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MockFlightDataService.cs" />
+    <Compile Include="MockLocalDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestLocalStorage.cs" />
   </ItemGroup>
