restructure : FlightData as separate class, DataService just does the operations on exterrnal data provider, LocalDataService has diferrent Insert etc calls

--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Capacity.cs" />
     <Compile Include="Entity.cs" />
     <Compile Include="Flight.cs" />
+    <Compile Include="FlightData.cs" />
     <Compile Include="IFlightDataManager.cs" />
     <Compile Include="IFlightDataService.cs" />
     <Compile Include="ILookups.cs" />
