busy with SyncManager TDD

--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -116,6 +116,7 @@
     <Compile Include="IFlightDataManager.cs" />
     <Compile Include="IFlightDataService.cs" />
     <Compile Include="ILookups.cs" />
+    <Compile Include="IOnlineFlightData.cs" />
     <Compile Include="Lookups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
