--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -10,7 +10,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LogbookApp.FlightDataManagerTest</RootNamespace>
-    <AssemblyName>LogbookApp.FlightDataManager.Test</AssemblyName>
+    <AssemblyName>LogbookApp.FlightDataManagerTest</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -115,6 +115,7 @@
     <Compile Include="FlightDataServiceTestsInitialLoad.cs" />
     <Compile Include="FlightDataServiceTestsSyncLocalData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SyncManagerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -141,9 +142,9 @@
       <Project>{89900CBD-6C4A-443B-93B9-67081C3308B9}</Project>
       <Name>LogbookApp.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LogbookApp.FlightDataManager\LogbookApp.FlightDataManager.csproj">
+    <ProjectReference Include="..\LogbookApp.FlightDataManager\LogbookApp.FlightDataManagement.csproj">
       <Project>{5895BD95-7913-43CA-961A-5929B08BA6B8}</Project>
-      <Name>LogbookApp.FlightDataManager</Name>
+      <Name>LogbookApp.FlightDataManagement</Name>
     </ProjectReference>
     <ProjectReference Include="..\LogbookApp.LocalData\LogbookApp.LocalData.csproj">
       <Project>{72683C7D-0662-4815-9E8E-6E03536FFBCF}</Project>
