--- a/LogbookApp/LogbookApp/LogbookApp.csproj
+++ b/LogbookApp/LogbookApp/LogbookApp.csproj
@@ -269,9 +269,9 @@
       <Project>{89900cbd-6c4a-443b-93b9-67081c3308b9}</Project>
       <Name>LogbookApp.Data</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LogbookApp.FlightDataManager\LogbookApp.FlightDataManager.csproj">
+    <ProjectReference Include="..\LogbookApp.FlightDataManager\LogbookApp.FlightDataManagement.csproj">
       <Project>{5895BD95-7913-43CA-961A-5929B08BA6B8}</Project>
-      <Name>LogbookApp.FlightDataManager</Name>
+      <Name>LogbookApp.FlightDataManagement</Name>
     </ProjectReference>
     <ProjectReference Include="..\LogbookApp.LocalData\LogbookApp.LocalData.csproj">
       <Project>{72683C7D-0662-4815-9E8E-6E03536FFBCF}</Project>
