--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -110,7 +110,7 @@
     <Compile Include="AircraftClass.cs" />
     <Compile Include="Airfield.cs" />
     <Compile Include="Capacity.cs" />
-    <Compile Include="Entity.cs" />
+    <Compile Include="IEntity.cs" />
     <Compile Include="Flight.cs" />
     <Compile Include="FlightData.cs" />
     <Compile Include="IFlightDataManager.cs" />
