--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -109,11 +109,13 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlightDataServiceTestsGetAvailableDataService.cs" />
     <Compile Include="FlightDataServiceTestsGetData.cs" />
     <Compile Include="FlightDataServiceTestsSave.cs" />
     <Compile Include="FlightDataServiceTestsBase.cs" />
     <Compile Include="FlightDataServiceTestsInitialLoad.cs" />
     <Compile Include="FlightDataServiceTestsSyncLocalData.cs" />
+    <Compile Include="MockSyncManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncManagerTests.cs" />
   </ItemGroup>
