--- a/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManagement.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManagement.csproj
@@ -111,6 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FlightDataManager.cs" />
+    <Compile Include="ISyncManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncManager.cs" />
   </ItemGroup>
