Flight validation and flight userid

--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -123,6 +123,7 @@
     <Compile Include="UserManager.cs" />
     <Compile Include="Validation\FlightValidator.cs" />
     <Compile Include="Validation\IValidator.cs" />
+    <Compile Include="Validation\LogbookValidationResult.cs" />
     <Compile Include="Validation\ValidationExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -136,7 +137,8 @@
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>$(ProjectDir)\MoqaLateCommandLine\MoqaLate.exe "$(SolutionDir)$(ProjectName)" "$(SolutionDir)LogbookApp.Data.Test\Fakes"</PostBuildEvent>
+    <PostBuildEvent>
+    </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
