New user - no internet connection - should still be able to add flights etc - Initial TDD

--- a/LogbookApp/InternetDetection/InternetDetection.csproj
+++ b/LogbookApp/InternetDetection/InternetDetection.csproj
@@ -6,15 +6,14 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{54D49B49-9F4C-4137-BDEA-FBE4C2043B90}</ProjectGuid>
+    <ProjectGuid>{C46F31CA-32D2-4FB4-AFEF-958A16E1FA6F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LogbookApp.FlightDataManagerTest</RootNamespace>
-    <AssemblyName>LogbookApp.FlightDataManagerTest</AssemblyName>
+    <RootNamespace>InternetDetection</RootNamespace>
+    <AssemblyName>InternetDetection</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>LogbookApp.FlightDataManager.Test_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -99,69 +98,13 @@
     <ErrorReport>prompt</ErrorReport>
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup>
-    <AppXPackage>True</AppXPackage>
-    <AppxPackageIncludePrivateSymbols>true</AppxPackageIncludePrivateSymbols>
-  </PropertyGroup>
   <ItemGroup>
-    <!--A reference to the entire .Net Framework and Windows SDK are automatically included-->
-    <SDKReference Include="MSTestFramework, Version=11.0" />
-    <SDKReference Include="TestPlatform, Version=11.0" />
+    <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FlightDataServiceTestsGetAvailableDataService.cs" />
-    <Compile Include="FlightDataServiceTestsGetData.cs" />
-    <Compile Include="FlightDataServiceTestsInitialLoadNew.cs" />
-    <Compile Include="FlightDataServiceTestsSave.cs" />
-    <Compile Include="FlightDataServiceTestsBase.cs" />
-    <Compile Include="FlightDataServiceTestsInitialLoad.cs" />
-    <Compile Include="FlightDataServiceTestsSyncLocalData.cs" />
-    <Compile Include="MockInternetTools.cs" />
-    <Compile Include="MockSyncManager.cs" />
+    <Compile Include="IInternetTools.cs" />
+    <Compile Include="InternetTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyncManagerTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <AppxManifest Include="Package.appxmanifest">
-      <SubType>Designer</SubType>
-    </AppxManifest>
-    <None Include="LogbookApp.FlightDataManager.Test_TemporaryKey.pfx" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Images\UnitTestLogo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\UnitTestSmallLogo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\UnitTestSplashScreen.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Images\UnitTestStoreLogo.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\InternetDetection\InternetDetection.csproj">
-      <Project>{C46F31CA-32D2-4FB4-AFEF-958A16E1FA6F}</Project>
-      <Name>InternetDetection</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LogbookApp.Data\LogbookApp.Data.csproj">
-      <Project>{89900CBD-6C4A-443B-93B9-67081C3308B9}</Project>
-      <Name>LogbookApp.Data</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LogbookApp.FlightDataManager\LogbookApp.FlightDataManagement.csproj">
-      <Project>{5895BD95-7913-43CA-961A-5929B08BA6B8}</Project>
-      <Name>LogbookApp.FlightDataManagement</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LogbookApp.LocalData\LogbookApp.LocalData.csproj">
-      <Project>{72683C7D-0662-4815-9E8E-6E03536FFBCF}</Project>
-      <Name>LogbookApp.LocalData</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LogbookApp.Mocks\LogbookApp.Mocks.csproj">
-      <Project>{69426F3F-EC27-4C6F-B54F-8C014ACCBA1B}</Project>
-      <Name>LogbookApp.Mocks</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
@@ -170,7 +113,7 @@
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
-  </Target>  
+  </Target>
   <Target Name="AfterBuild">
   </Target>
   -->
