revamped flightdatamanager - 2 tests failed

--- a/LogbookApp/LogbookApp/LogbookApp.csproj
+++ b/LogbookApp/LogbookApp/LogbookApp.csproj
@@ -258,6 +258,10 @@
       <Project>{6839bcfb-3893-4aca-b5d2-9362bb164cb0}</Project>
       <Name>FlightTimes</Name>
     </ProjectReference>
+    <ProjectReference Include="..\InternetDetection\InternetDetection.csproj">
+      <Project>{C46F31CA-32D2-4FB4-AFEF-958A16E1FA6F}</Project>
+      <Name>InternetDetection</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LogbookApp.Controls\LogbookApp.Controls.csproj">
       <Project>{A9F8058B-2F54-4543-BAB7-58BBD0430F28}</Project>
       <Name>LogbookApp.Controls</Name>
