Startup : Online Save Flight : Offline Save Flight : OnLine not quite right yet

--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Aircraft.cs" />
     <Compile Include="AircraftClass.cs" />
     <Compile Include="Airfield.cs" />
+    <Compile Include="BaseOnlineFlightDataService.cs" />
     <Compile Include="Capacity.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Flight.cs" />
