--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -109,8 +109,10 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FlightDataServiceTestsLocalDataUser.cs" />
     <Compile Include="FlightDataServiceTestsGetData.cs" />
     <Compile Include="FlightDataServiceTestsOnDataServiceChanged.cs" />
+    <Compile Include="FlightDataServiceTestsSaveAfterDataServiceChanged.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserConnected.cs" />
     <Compile Include="FlightDataServiceTestsStartupNewUserNotConnected.cs" />
     <Compile Include="FlightDataServiceTestsSave.cs" />
@@ -120,7 +122,11 @@
     <Compile Include="MockInternetTools.cs" />
     <Compile Include="MockSyncManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyncManagerTests.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsUser.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsAircraft.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsAirfields.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsBase.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsFlights.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
