--- a/LogbookApp/LogbookApp.InMemoryData/LogbookApp.InMemoryData.csproj
+++ b/LogbookApp/LogbookApp.InMemoryData/LogbookApp.InMemoryData.csproj
@@ -6,11 +6,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{89900CBD-6C4A-443B-93B9-67081C3308B9}</ProjectGuid>
+    <ProjectGuid>{C6AB3334-FDB2-43B1-8D60-AC943CA97890}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LogbookApp.Data</RootNamespace>
-    <AssemblyName>LogbookApp.Data</AssemblyName>
+    <RootNamespace>LogbookApp.InMemoryData</RootNamespace>
+    <AssemblyName>LogbookApp.InMemoryData</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{BC8A1FFA-BEE3-4634-8014-F334798102B3};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -100,42 +100,19 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <ProjectReference Include="..\LogbookApp.Data\LogbookApp.Data.csproj">
+      <Project>{89900cbd-6c4a-443b-93b9-67081c3308b9}</Project>
+      <Name>LogbookApp.Data</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcType.cs" />
-    <Compile Include="Aircraft.cs" />
-    <Compile Include="AircraftClass.cs" />
-    <Compile Include="Airfield.cs" />
-    <Compile Include="BaseOnlineFlightDataService.cs" />
-    <Compile Include="Capacity.cs" />
-    <Compile Include="IEntity.cs" />
-    <Compile Include="Flight.cs" />
-    <Compile Include="FlightData.cs" />
-    <Compile Include="IFlightDataManager.cs" />
-    <Compile Include="IFlightDataService.cs" />
-    <Compile Include="ILookups.cs" />
     <Compile Include="InMemoryLookups.cs" />
-    <Compile Include="IOnlineFlightData.cs" />
-    <Compile Include="Lookups.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="User.cs" />
-    <Compile Include="UserManager.cs" />
-    <Compile Include="Validation\FlightValidator.cs" />
-    <Compile Include="Validation\IValidator.cs" />
-    <Compile Include="Validation\LogbookValidationResult.cs" />
-    <Compile Include="Validation\ValidationExtensions.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
