--- a/LogbookApp/LogbookApp.Data.Azure/LogbookApp.Data.Azure.csproj
+++ b/LogbookApp/LogbookApp.Data.Azure/LogbookApp.Data.Azure.csproj
@@ -109,6 +109,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Framework\BaseData\BaseData.csproj">
+      <Project>{5B0AE921-C26D-47DD-8357-508464F036D3}</Project>
+      <Name>BaseData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Framework\OnlineOfflineSyncLibrary\OnlineOfflineSyncLibrary.csproj">
+      <Project>{af8b13e5-162d-453d-a5c5-fd8a54f97dbc}</Project>
+      <Name>OnlineOfflineSyncLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\LogbookApp.Data\LogbookApp.Data.csproj">
       <Project>{89900cbd-6c4a-443b-93b9-67081c3308b9}</Project>
       <Name>LogbookApp.Data</Name>
