--- a/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
+++ b/LogbookApp/LogbookApp.Data/LogbookApp.Data.csproj
@@ -109,9 +109,8 @@
     <Compile Include="Aircraft.cs" />
     <Compile Include="AircraftClass.cs" />
     <Compile Include="Airfield.cs" />
-    <Compile Include="BaseOnlineFlightDataService.cs" />
+    <Compile Include="BaseFlightDataService.cs" />
     <Compile Include="Capacity.cs" />
-    <Compile Include="IEntity.cs" />
     <Compile Include="Flight.cs" />
     <Compile Include="FlightData.cs" />
     <Compile Include="IFlightDataManager.cs" />
@@ -127,6 +126,16 @@
     <Compile Include="Validation\IValidator.cs" />
     <Compile Include="Validation\LogbookValidationResult.cs" />
     <Compile Include="Validation\ValidationExtensions.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Framework\BaseData\BaseData.csproj">
+      <Project>{5B0AE921-C26D-47DD-8357-508464F036D3}</Project>
+      <Name>BaseData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Framework\OnlineOfflineSyncLibrary\OnlineOfflineSyncLibrary.csproj">
+      <Project>{AF8B13E5-162D-453D-A5C5-FD8A54F97DBC}</Project>
+      <Name>OnlineOfflineSyncLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
