--- a/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager.Test/LogbookApp.FlightDataManagerTest.csproj
@@ -122,11 +122,11 @@
     <Compile Include="MockInternetTools.cs" />
     <Compile Include="MockSyncManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyncManagerTests\SyncManagerTestsUser.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAircraft.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsAirfields.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsBase.cs" />
     <Compile Include="SyncManagerTests\SyncManagerTestsFlights.cs" />
+    <Compile Include="SyncManagerTests\SyncManagerTestsUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -149,6 +149,14 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Framework\BaseData\BaseData.csproj">
+      <Project>{5b0ae921-c26d-47dd-8357-508464f036d3}</Project>
+      <Name>BaseData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Framework\OnlineOfflineSyncLibrary\OnlineOfflineSyncLibrary.csproj">
+      <Project>{af8b13e5-162d-453d-a5c5-fd8a54f97dbc}</Project>
+      <Name>OnlineOfflineSyncLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InternetDetection\InternetDetection.csproj">
       <Project>{C46F31CA-32D2-4FB4-AFEF-958A16E1FA6F}</Project>
       <Name>InternetDetection</Name>
