--- a/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManagement.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManagement.csproj
@@ -100,6 +100,14 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <ProjectReference Include="..\Framework\BaseData\BaseData.csproj">
+      <Project>{5B0AE921-C26D-47DD-8357-508464F036D3}</Project>
+      <Name>BaseData</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Framework\OnlineOfflineSyncLibrary\OnlineOfflineSyncLibrary.csproj">
+      <Project>{af8b13e5-162d-453d-a5c5-fd8a54f97dbc}</Project>
+      <Name>OnlineOfflineSyncLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\InternetDetection\InternetDetection.csproj">
       <Project>{C46F31CA-32D2-4FB4-AFEF-958A16E1FA6F}</Project>
       <Name>InternetDetection</Name>
@@ -115,9 +123,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FlightDataManager.cs" />
-    <Compile Include="ISyncManager.cs" />
+    <Compile Include="FlightsSyncManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SyncManager.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
     <VisualStudioVersion>11.0</VisualStudioVersion>
