--- a/LogbookApp/Framework/OnlineOfflineSyncLibrary/OnlineOfflineSyncLibrary.csproj
+++ b/LogbookApp/Framework/OnlineOfflineSyncLibrary/OnlineOfflineSyncLibrary.csproj
@@ -100,15 +100,20 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <ProjectReference Include="..\..\InternetDetection\InternetDetection.csproj">
+      <Project>{C46F31CA-32D2-4FB4-AFEF-958A16E1FA6F}</Project>
+      <Name>InternetDetection</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BaseData\BaseData.csproj">
       <Project>{5B0AE921-C26D-47DD-8357-508464F036D3}</Project>
       <Name>BaseData</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataSyncManager.cs" />
+    <Compile Include="DataManager.cs" />
     <Compile Include="ISyncableData.cs" />
     <Compile Include="ISyncManager.cs" />
+    <Compile Include="IUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SyncManager.cs" />
   </ItemGroup>
