--- a/LogbookApp/Framework/OnlineOfflineSyncLibrary2/OnlineOfflineSyncLibrary2.Test.csproj
+++ b/LogbookApp/Framework/OnlineOfflineSyncLibrary2/OnlineOfflineSyncLibrary2.Test.csproj
@@ -109,7 +109,9 @@
     <SDKReference Include="TestPlatform, Version=11.0" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataManagerTests\DataManagerTest.cs" />
+    <Compile Include="DataManagerTests\DataManagerTestBase.cs" />
+    <Compile Include="DataManagerTests\DataManagerTestStartUp.cs" />
+    <Compile Include="DataManagerTests\DataManagerTestSyncData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Stubs\MockBaseDataService.cs" />
     <Compile Include="Stubs\MockOfflineDataService.cs" />
