--- a/LogbookApp/Framework/OnlineOfflineSyncLibrary/OnlineOfflineSyncLibrary.csproj
+++ b/LogbookApp/Framework/OnlineOfflineSyncLibrary/OnlineOfflineSyncLibrary.csproj
@@ -111,7 +111,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataManager.cs" />
-    <Compile Include="DataServiceState.cs" />
+    <Compile Include="DataService.cs" />
     <Compile Include="IDataService.cs" />
     <Compile Include="IOfflineDataService.cs" />
     <Compile Include="IOnlineDataService.cs" />
