--- a/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManagement.csproj
+++ b/LogbookApp/LogbookApp.FlightDataManager/LogbookApp.FlightDataManagement.csproj
@@ -124,6 +124,7 @@
   <ItemGroup>
     <Compile Include="FlightDataManager.cs" />
     <Compile Include="FlightsSyncManager.cs" />
+    <Compile Include="OnlineFlightDataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '11.0' ">
